--- a/FormularioProdMaqEmpEx/index.html
+++ b/FormularioProdMaqEmpEx/index.html
@@ -19,12 +19,12 @@
                             <input 
                             type="hidden"
                             name="x-sheetmonkey-insert-worksheet"
-                            value="Test1"
+                            value="ProdMaqEmpExt"
                         />
                         <input 
                         type="hidden" 
                         name="x-sheetmonkey-redirect" 
-                        value="http://127.0.0.1:5500/ProdMaqEmpEx/FormularioProdMaqEmpEx/Formulario.html" 
+                        value="http://127.0.0.1:5500/ProdMaqEmpEx/FormularioProdMaqEmpEx/index.html" 
                     />
                             <!-- Put HTML input fields in here and see how they fill up your sheet -->
                             <div class="mb-3">
