--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="FormularioProdMaqEmpEx/styles.css">
     <title>Producción en maquila en empaque externo</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
                         <input 
                         type="hidden" 
                         name="x-sheetmonkey-redirect" 
-                        value="http://127.0.0.1:5500/ProdMaqEmpEx/FormularioProdMaqEmpEx/index.html" 
+                        value="http://127.0.0.1:5500/index.html" 
                     />
                             <!-- Put HTML input fields in here and see how they fill up your sheet -->
                             <div class="mb-3">
@@ -82,7 +82,7 @@
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="FormularioProdMaqEmpEx/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
