--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <input 
                         type="hidden" 
                         name="x-sheetmonkey-redirect" 
-                        value="http://127.0.0.1:5500/index.html" 
+                        value="https://eliteproduceincg.github.io/ProdMaqEmpEx/index.html" 
                     />
                             <!-- Put HTML input fields in here and see how they fill up your sheet -->
                             <div class="mb-3">
